# PYHABOT

./: .dockerignore  .env.docker  .env.example  .envrc.example  .gitignore  .python-version  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  railway.toml  run_api.py  start_both.sh  test-docker.sh
.github/: copilot-instructions.md
.github/workflows/: build-and-push.yml  ci.yml
docs/: API_IMPLEMENTATION_SUMMARY.md  API_TESTING_GUIDE.md  ARCHITECTURE.md  CODE_ANALYSIS_PROMPT.md  DOCKER_LAYER_CACHING_AND_RICH_LOGGING.md  GITHUB_ACTIONS_SETUP.md  LEGACY_CLEANUP.md  MIGRATION.md  PHASE5_COMPLETION.md  REFACTORING_PLAN.md  REFACTORING_PROMPT_PLAN.md  REFACTORING_PROMPT_TASKS.md  REFACTORING_TASKS.md  WEBHOOK_GUIDE.md  WEBHOOK_TESTING.md  container-diagram.puml  context-diagram.puml  sequence-diagram.puml
scripts/: setup-docker.sh  test_webhook_manual.py
src/pyhabot/: __init__.py  app.py  cli.py  config.py  errors.py  logging.py  simple_app.py  simple_cli.py  simple_config.py
src/pyhabot/adapters/: __init__.py
src/pyhabot/adapters/api/: __init__.py  health_api.py  job_api.py  watch_api.py  webhook_api.py
src/pyhabot/adapters/integrations/: __init__.py  base.py  discord.py  telegram.py  terminal.py
src/pyhabot/adapters/notifications/: webhook.py
src/pyhabot/adapters/repos/: tinydb_repo.py
src/pyhabot/adapters/scraping/: hardverapro.py
src/pyhabot/api/: __init__.py  dependencies.py  exceptions.py  job_manager.py  job_queue.py  main.py  models.py
src/pyhabot/domain/: __init__.py  models.py  ports.py  services.py
src/pyhabot/scheduler/: __init__.py  runner.py
tests/: __init__.py  docker-compose.test.yml  test_cli.py  test_domain_services.py  test_hardverapro_scraper.py  test_parsing_helpers.py  test_scheduler.py  test_terminal_integration_e2e.py  test_webhook.py  test_webhook_api.py  test_webhook_docker.sh  test_webhook_integration.py  webhook-server.conf
tests/bruno/: run-tests.sh  test-api.sh
tests/bruno/pyhabot-api/: 01_Health_Checks.bru  02_Watch_Management.bru  03_Webhook_Management.bru  04_Webhook_Testing.bru  05_Job_Management.bru  06_Error_Handling_Tests.bru  README.md  bruno.json
tests/bruno/test-collection/: 01_Simple_Test.bru  bruno.json
tests/fixtures/: hardverapro_empty.html  hardverapro_list.html  hardverapro_malformed.html
